--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> BANGUN RUANG SISI DATAR </title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>FK</title>
 </head>
 <body>
+    <nav class="sidebar">
+        <div class="text">Untirta</div>
+        <ul>
+            <li><a href="page/home.html"><i class='bx bx-menu'></i><span class="link_name">HOME</span></a></li>  
+                <li><a href="page/faperta"><i class='bx bx-detail'></i><span class="link_name">FAPERTA</span></a></li>  
+                <li><a href="page/feb"><i class='bx bx-book'></i><span class="link_name">FEB</span></a></li> 
+                    <li><a href="page/fh"><i class='bx bx-book'></i><span class="link_name">FH</span></a></li>
+                    <li><a href="page/fisip"><i class='bx bx-book'></i><span class="link_name">FISIP</span></a></li>
+                    <li><a href="page/fk"><i class='bx bx-book'></i><span class="link_name">FK</span></a></li>
+                    <li><a href="page/fkip"><i class='bx bx-book'></i><span class="link_name">FKIP</span></a></li>
+                 <li><a href="page/pascasarjana"><i class='bx bx-book-bookmark'></i><span class="link_name">PASCASARJANA</span></a></li>  
+            <li><a href="page/Profil"><i class='bx bx-book-bookmark'></i><span class="link_name">Profil</span></a></li> 
+        </ul>
+    </nav>
 
-    {% extends 'base.html' %}
+    <main class="main-content">
 
-    {% block content %}
-
-    <center>
-    <h1>FAKULTAS KEDOKTERAN</h1>
-    </center>
-    
-    <h2>Jurusan yang terdapat dalam Fakultas KEDOKTERAN, terdiri dari:</h2>
-    <p>1. Kedokteran</p>
-    <p>2. Keperawatan</p>
-    <p>3. Ilmu Olahraga</p>
-    <p>4. Gizi</p>
-
-    {{ judul }} <br>
-
-{% endblock %}
+    </main>
 </body>
-</html> 
+</html>
